--- a/css/style_main.css
+++ b/css/style_main.css
@@ -20,7 +20,7 @@ body {
 .header {
     width: 100%;
     height: 60px;
-    background-color: #4d2514;
+    background-color: #63c9ed;
     box-sizing: border-box;
     color: white;
     display: flex;
@@ -53,7 +53,7 @@ body {
 
 
 .footer {
-    background-color: #4d2514;
+    background-color: #63c9ed;
     color: #fff;
     text-align: center;
   }
