--- a/css/style_main.css
+++ b/css/style_main.css
@@ -56,6 +56,10 @@ body {
     background-color: #63c9ed;
     color: #fff;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
   }
 
 
